Fixed collapsing sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,10 @@
     top: 0;
     left:0;
     height: 100%;
+    min-width: 250px;
     background-color: blueviolet;
     padding: 20px;
+    z-index: 1000;
 }
 
 .gallery {
@@ -75,7 +77,7 @@
     margin:  auto;
     margin-top: 20px;
     max-width: 90%;
-    max-height: 90%;
+    height: auto;
 }
 
 #placeholder {
